--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">DCI</h1>
-        <p class="header">Testing github pages for DCI...</p>
+        <p class="header">Testing github pages</p>
 
 
 
