--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
       <section>
         <h3>
-<a name="welcome-to-dci" class="anchor" href="#welcome-to-dci"><span class="octicon octicon-link"></span></a>Welcome to DCI.</h3>
+<a name="welcome-to-dci" class="anchor" href="#welcome-to-dci"><span class="octicon octicon-link"></span></a>DCI - Data Context Interaction</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
