--- a/index.html
+++ b/index.html
@@ -17,12 +17,26 @@
     <div class="wrapper">
       <header>
         <h1 class="header">DCI</h1>
-        <p class="header">Testing github pages</p>
-
-
-
+        <p class="header"><a href="dci.github.io/introduction.md">(dummy menu...)</a></p>
         <ul>
-          <li><a class="buttons github" href="https://github.com/DCI">GitHub Profile</a></li>
+          <li>
+            <a href="dci.github.io/introduction.md">Introduction</a>
+          </li>
+          <li>
+            <a href="dci.github.io/introduction.md">FAQ</a>
+          </li>
+          <li>
+            <a href="dci.github.io/introduction.md">Documents</a>
+          </li>
+          <li>
+            <a href="dci.github.io/introduction.md">Examples</a>
+          </li>
+          <li>
+            <a href="dci.github.io/introduction.md">Downloads</a>
+          </li>
+          <li>
+            <a class="buttons github" href="https://github.com/DCI">GitHub Profile</a>
+          </li>
         </ul>
 
       </header>
@@ -31,7 +45,6 @@
 <a name="welcome-to-dci" class="anchor" href="#welcome-to-dci"><span class="octicon octicon-link"></span></a>DCI - Data Context Interaction</h3>
 
 <p>A New Role-Based Paradigm for specifying collaborating objects</p>
-
 
 <p>The essence of object orientation is that networks of collaborating objects work together to achieve a common goal. The common sense of object oriented programming should reflect this essence with code that specifies how the objects collaborate. Our industry has, unfortunately, chosen differently and code is commonly written in terms of classes. A class tells us everything about the properties of the individual objects that are its instances. It does not tell us anything about how these instances work together to achieve the system behavior.</p>
 
