--- a/index.html
+++ b/index.html
@@ -48,29 +48,21 @@
 
 <p>The essence of object orientation is that networks of collaborating objects work together to achieve a common goal. The common sense of object oriented programming should reflect this essence with code that specifies how the objects collaborate. Our industry has, unfortunately, chosen differently and code is commonly written in terms of classes. A class tells us everything about the properties of the individual objects that are its instances. It does not tell us anything about how these instances work together to achieve the system behavior.</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>The result is that our code does not reveal everything about how a system will work. This is
+  clearly not satisfactory, and we need a new paradigm as the foundation for more expressive
+  code. The DCI (Data-Context-Interaction) is such a paradigm. DCI separates a
+  program into different perspectives where each perspective focuses on certain system
+  properties. Code in the <em>Data</em> perspective specifies how information is represented by stand-alone objects.
+  Code in the <em>Context</em> perspective specifies runtime networks of interconnected objects as  similar structures of interconnected <em>roles</em>. Code
+  in the <em>Interaction</em> perspective specifies how the networked objects collaborate to achieve the
+system behavior. </p>
+<p align="left">Trygve Reenskaug is the originator of DCI.  Jim Coplien is its leading contributor and prime mover in the advancing DCI from early theory to accepted practice. </p>
+<p>Trygve's home pages are at <a href="http://folk.uio.no/trygver/">http://folk.uio.no/trygver/</a></p>
+<p align="left">Jim's DCI pages are at <a href="http://www.gertrudandcope.com">http://www.gertrudandcope.com</a> and <a href="http://www.leansoftwarearchitecture.com">http://www.leansoftwarearchitecture.com</a></p>
+<p align="left">Also see the DCI mailing list <em>object-composition (at) googlegroups.com.</em></p>
+<p align="left">	Redundant reference: <em><strong><font size="5"><a href="/doku.php?id=wiki:faq">FAQ                  </a></font></strong></em></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
