--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 <p>[Stub of the original website at <a href="http://fulloo.info/">fulloo.info</a>]</p>
 
+<p>[link to file example]<a href="commonsense.pdf">Common sense article</a></p>
         
 <p>A New Role-Based Paradigm for specifying collaborating objects</p>
 
