--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 
       </header>
       <section>
-        <h3>
-<a name="welcome-to-dci" class="anchor" href="#welcome-to-dci"><span class="octicon octicon-link"></span></a>DCI - Data Context Interaction</h3>
+        <h2>
+<a name="welcome-to-dci" class="anchor" href="#welcome-to-dci"><span class="octicon octicon-link"></span></a>DCI - Data Context Interaction</h2>
 
 <p>[Stub of the original website at <a href="http://fulloo.info/">fulloo.info</a>]</p>
 
-<p>[link to file example]<a href="commonsense.pdf">Common sense article</a></p>
+<p>[link to file example] <a href="commonsense.pdf">Common sense article</a></p>
         
-<p>A New Role-Based Paradigm for specifying collaborating objects</p>
+<h4>A New Role-Based Paradigm for specifying collaborating objects</h4>
 
 <p>The essence of object orientation is that networks of collaborating objects work together to achieve a common goal. The common sense of object oriented programming should reflect this essence with code that specifies how the objects collaborate. Our industry has, unfortunately, chosen differently and code is commonly written in terms of classes. A class tells us everything about the properties of the individual objects that are its instances. It does not tell us anything about how these instances work together to achieve the system behavior.</p>
 
