--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         <h1 class="header">DCI</h1>
         <ul>
           <li>
-            <a class="buttons"  href="http://fulloo.info/Introduction/">Introduction</a>
+            <a href="http://fulloo.info/Introduction/">Introduction</a>
           </li>
           <li>
-            <a class="buttons" href="http://fulloo.info/Documents/">Documents</a>
+            <a href="http://fulloo.info/Documents/">Documents</a>
           </li>
           <li>
-            <a class="buttons" href="http://fulloo.info/Examples/">Examples</a>
+            <a href="http://fulloo.info/Examples/">Examples</a>
           </li>
           <li>
-            <a class="buttons" href="http://fulloo.info/Downloads/">Downloads</a>
+            <a href="http://fulloo.info/Downloads/">Downloads</a>
           </li>
           <li>
-            <a class="buttons"  href="http://fulloo.info/Downloads/">Downloads</a>
+            <a href="http://fulloo.info/Downloads/">Downloads</a>
           </li>
           <li>
-            <a class="buttons" href="http://fulloo.info/Events/">Events</a>
+            <a href="http://fulloo.info/Events/">Events</a>
           </li>
           <li>
             <a class="buttons github" href="https://github.com/DCI">GitHub Profile</a>
