--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 <p>[Stub of the original website at <a href="http://fulloo.info/">fulloo.info</a>]</p>
 
 <p>[link to file example] <a href="commonsense.pdf">Common sense article</a></p>
+   
+<p>[link to other page] <a href="Introduction.md">Introduction (how to make page?)</a></p>
         
 <h4>A New Role-Based Paradigm for specifying collaborating objects</h4>
 
